--- a/index.html
+++ b/index.html
@@ -69,13 +69,16 @@
     #dice-container {
       display: flex;
       justify-content: center;
+      margin-top: 25px;
       margin-bottom: 25px;
       gap: 12px;
     }
     .dice {
-      font-size: 36px;
+      font-size: 64px;
       width: 52px;
       height: 52px;
+      margin-top: 10px;
+      margin-bottom: 10px;
       background: #a97e2f;
       border-radius: 10px;
       box-shadow: 0 4px 6px #6f5015 inset, 0 2px 4px rgba(0,0,0,0.4);
@@ -126,6 +129,7 @@
       color: #5a4a11;
     }
     .log {
+      display: none;
       background: #5e4b18;
       padding: 15px;
       border-radius: 10px;
@@ -134,6 +138,9 @@
       font-size: 0.9em;
       line-height: 1.3;
       box-shadow: inset 0 0 12px #7a6420;
+    }
+    #log{
+      display:none;
     }
   </style>
 </head>
@@ -148,10 +155,11 @@
     <div id="dice-container"></div>
     <div class="controls">
       <button id="roll-button">Roll Dice</button>
-      <button id="bank-button" disabled>Bank Points</button>
+      <button id="bank-button" disabled>Lock Dice</button>
       <button id="end-turn-button" disabled>End Turn</button>
     </div>
     <div class="log" id="log"></div>
+    <div id="announcement" style="color: red; font-weight: bold;"></div>
   </div>
 
   <script>
@@ -220,8 +228,8 @@
 
     // Log message helper
     function logMessage(msg) {
-      log.innerHTML += `<div>${msg}</div>`;
-      log.scrollTop = log.scrollHeight;
+      // log.innerHTML += `<div>${msg}</div>`;
+      // log.scrollTop = log.scrollHeight;
     }
 
     // Roll dice randomly
@@ -308,6 +316,16 @@
         return;
       }
       diceValues = rollDice(currentDiceCount);
+        if (!diceValues.includes(1) && !diceValues.includes(5)) {
+        const announcementDiv = document.getElementById('announcement');
+        announcementDiv.textContent = 'Farkle!';
+        announcementDiv.style.display = 'block';
+
+        setTimeout(() => {
+          announcementDiv.style.display = 'none';
+        }, 2000);
+      }
+
       renderDice();
 
       const scoreThisRoll = calculateScore(diceValues);
@@ -544,7 +562,8 @@ modeRadios.forEach(radio => {
     gameMode = document.querySelector('input[name="gameMode"]:checked').value;
     initPlayers();
   };
-});
+}
+);
 
 // Start game
 initPlayers();
